--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="a06367.apicture">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".APictureApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.APicture">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +25,35 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.main.StarredActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.CabActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.NewCollectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.CollectionActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.detail.FullScreenActivity"
+            android:parentActivityName=".ui.main.MainActivity" />
+
+        <provider
+            android:name=".utils.CustomFileProvider"
+            android:authorities="${authorities}"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+
     </application>
 
 </manifest>
